--- a/app/src/main/res/layout/usa_form8.xml
+++ b/app/src/main/res/layout/usa_form8.xml
@@ -145,7 +145,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Previous U.S. Visa issue Date"
-                    android:id="@+id/group_name"
+                    android:id="@+id/previous_visa_issue_date"
                     android:inputType="phone"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
             </android.support.design.widget.TextInputLayout>
